# ska-tangoctl

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  TANGOKTL.md  img  mypy.ini  pyproject.toml  requirements.txt  setup.py
.gitlab/ci/check-dependencies/: .pipeline.yaml
docs/src/: CHANGELOG.md  HOWTO.md  INSTALL.md  conf.py  howto.rst  index.rst  install.rst  introduction.rst  readme.rst
docs/src/api/: index.rst
docs/src/api/k8s_info/: index.rst
docs/src/api/notebook_helper/: index.rst
docs/src/api/tango_control/: index.rst
docs/src/api/tango_kontrol/: index.rst
docs/src/api/tla_jargon/: index.rst
docs/src/img/: icon.xcf
examples/: attribute_read.py  attributes_list.py  command_read.py  commands_list.py  devices_list.py  info_read.py  properties_list.py  property_read.py
man/man1/: tangoctl.1  tangoktl.1
resources/: dev_offline.json  dev_online.json  dev_query.json
src/ska_tangoctl/: __init__.py
src/ska_tangoctl/gui01/: tangoktl_gui.py
src/ska_tangoctl/gui02/: tangoctl_gui2.py  tangoctl_gui2c.py
src/ska_tangoctl/k8s_info/: __init__.py  get_k8s_info.py
src/ska_tangoctl/notebook_helper/: __init__.py  get_tango_notebook.py  mid_itf_control.py
src/ska_tangoctl/ska_notebook_helper/: __init__.py  get_tango_notebook.py  mid_itf_control.py
src/ska_tangoctl/tango_control/: __init__.py  check_tango_device.py  disp_action.py  get_tango_info.py  progress_bar.py  read_tango_config.py  read_tango_device.py  read_tango_device_basic.py  read_tango_devices.py  read_tango_devices_basic.py  ska_jargon.py  tango_control.py  tango_control_help.py  tango_control_setup.py  tango_database.py  tango_device_tree.py  tango_json.py  tangoctl.json  tangoctl.py  tangoctl_config.py  test_tango_device.py  test_tango_device2.py  test_tango_script.py
src/ska_tangoctl/tango_kontrol/: __init__.py  get_namespaces.py  tango_kontrol.py  tango_kontrol_help.py  tango_kontrol_setup.py  tangoktl.json  tangoktl.py  tangoktl_config.py
src/ska_tangoctl/tango_kontrol_gui/: tangoctl_gui.py  tangoktl_gui.py
src/ska_tangoctl/tango_kontrol_www/: __init__.py  app.py  index.html  main.py
src/ska_tangoctl/tango_kontrol_www/cgi-bin/: tangocia.py
src/ska_tangoctl/tango_kontrol_www/templates/: index.html  index_json.html  index_ns.html
src/ska_tangoctl/tla_jargon/: __init__.py
tests/: __init__.py  check_tangoctl.sh  check_tangoktl.sh
tests/unit/: __init__.py
tests/unit/tango_control/: conftest.py  test_tango_control.py
tests/unit/tango_kontrol/: conftest.py  test_tango_kontrol.py
www/cgi-bin/: tangocia.py
