[project]
name = "ska-tangoctl"
version = "0.5.0"
authors = [{name = "Johan Coetzer", email = "johan.coetzer@tsolo.io"}]
maintainers = [{name = "Johan Coetzer", email = "johan.coetzer@tsolo.io"}]
description = "Command line utility to query and test Tango devices"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

[project.urls]
Homepage = "https://gitlab.com/ska-telescope/ska-tangoctl"
Documentation = "https://ska-telescope-ska-tangoctl.readthedocs.io/en/latest/"
Repository = "https://gitlab.com/ska-telescope/ska-tangoctl"
Changelog = "https://gitlab.com/ska-telescope/ska-tangoctl/-/blob/main/CHANGELOG.md"

[tool.poetry]
include = ["MANIFEST.skao.int"]
name = "ska-tangoctl"
version = "0.5.0"
description = "Command line utility to query and test Tango devices"
authors = ["Johan Coetzer"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{ include = "ska_tangoctl", from = "src" }]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest-json-report = "^1.5.0"
pytest-repeat = "^0.9.1"
kubernetes = "^29.0.0"
pyyaml = "^6.0.1"
nbqa = "^1.7.1"
nbsphinx = "^0.9.3"
requests-mock = "^1.11.0"
pytango = "^9.4.2"
black = "24.3.0"
pycodestyle = "^2.11.1"
setuptools = "^69.5.1"
treelib = "^1.7.0"
gevent = "^24.2.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
recommonmark = "^0.7.1"
markupsafe = "^2.1.5"
sphinx-rtd-theme = "^1.2.2"
ska-ser-sphinx-theme = "^0.1.2"
pytango = "^9.4.2"
websocket-client = "^1.2.3"
numpy = "^1.23.5"
pyyaml = "^6.0.1"
gevent = "^24.2.1"
kubernetes = "^29.0.0"
PySide6 = "^6.7.1"
PySide6_Addons = "^6.7.1"
PySide6_Essentials = "^6.7.1"
fastapi = "^0.112.2"
fastapi-cli = "^0.0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^3.1.0"
pylint-junit = "^0.3.2"
pytest-cov = "^4.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
mypy = "^1.8.0"
twine = "^5.0.0"
python-build = "^0.2.13"
urllib3 = "^1.24.2"
markupsafe = "^2.1.5"
idna = "^3.6"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
setuptools = "^69.5.1"
treelib = "^1.7.0"
PySide6 = "^6.7.1"
PySide6_Addons = "^6.7.1"
PySide6_Essentials = "^6.7.1"
fastapi = "^0.112.2"
fastapi-cli = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
'src' = ['*.json']

[tool.pytest.ini_options]
addopts = "-p no:warnings"
testpaths = ["tests"]
log_cli_level = "INFO"
log_cli = "False"
junit_family = "xunit2"
python_classes = "!Test"

[tool.build_sphinx]
source-dir = "docs/src"
build-dir = "docs/_build"
all_files = 1
builder = "html"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99

[tool.flake8]
max-line-length = 99

[tool.black]
line_length = 99

[tool.poetry.scripts]
tangoctl = 'ska_tangoctl.tango_control.tangoctl:main'
tangoktl = 'ska_tangoctl.tango_kontrol.tangoktl:main'
